unpackaged/main/default/objects/conference360__Event_Registration_Submission__c/conference360__Event_Registration_Submission__c.object-meta.xml
<CustomObject>
    <label>Event Registration Submission</label>
    <nameField>
        <displayFormat>ER-{000000}</displayFormat>
        <label>Event Registration Submission Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Event Registration Submissions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>