unpackaged/main/default/objects/conference360__Event_Registration_Submission__c/fields/conference360__Attendee_JSON__c.field-meta.xml
<CustomField>
    <fullName>conference360__Attendee_JSON__c</fullName>
    <description>Technical field :The JSON code containing newly created attendee records.</description>
    <inlineHelpText>Technical field :The JSON code containing newly created attendee records.</inlineHelpText>
    <label>Attendee JSON</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>