unpackaged/main/default/objects/conference360__Event_Registration_Submission__c/fields/conference360__Contact__c.field-meta.xml
<CustomField>
    <fullName>conference360__Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Event Registration Submissions</relationshipLabel>
    <relationshipName>Event_Registration_Submissions</relationshipName>
    <type>Lookup</type>
</CustomField>