unpackaged/main/default/objects/conference360__Event_Registration_Submission__c/fields/conference360__Error_Message__c.field-meta.xml
<CustomField>
    <fullName>conference360__Error_Message__c</fullName>
    <description>If the form fails to process and an error is generated, this field will automatically contain the error message.</description>
    <inlineHelpText>If the form fails to process and an error is generated, this field will automatically contain the error message.</inlineHelpText>
    <label>Error Message</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>