unpackaged/main/default/objects/conference360__Event_Registration_Submission__c/fields/conference360__Process__c.field-meta.xml
<CustomField>
    <fullName>conference360__Process__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When this box is checked, the record will be processed using the Form Submission logic. It&#39;s the same function as clicking the Process button or that runs by the scheduled process. The box will be automatically unchecked after being &#39;checked&#39;.</description>
    <inlineHelpText>When this box is checked, the record will be processed using the Form Submission logic. It&#39;s the same function as clicking the Process button or that runs by the scheduled process. The box will be automatically unchecked after being &#39;checked&#39;.</inlineHelpText>
    <label>Process</label>
    <type>Checkbox</type>
</CustomField>